# tecton

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
notebooks/: signals.ipynb
quantlib/ingestion/apitools/: open_figi.py  openfigi.py
src/quantlib/ingestion/: dagster.yaml  jobs.py  ops.py  repository.py
synqvest/ingestion/: definitions.py  ops.py
synqvest/ingestion/apitools/: alpha_vantage.py  open_figi.py
tecton/: __init__.py  util.py
tecton/calculator/signal/: technical.py
tecton/core/: const.py  util.py
tecton/dal/: loader.py  mantle.py  table_config.yaml
tecton/dal/instrument/futures/: config.yaml  market.py
tecton/data/: dagster.yaml  definitions.py  util.py
tecton/data/apitools/: alpha_vantage.py  api_base.py  aws.py  databento.py  open_figi.py  writer.py  yfinance.py
tecton/data/equities/: assets.py
tecton/data/futures/: assets.py  todo.md
tecton/data/models/trend/: assets.py
tecton/ingestion/: assets.py  dagster.yaml  definitions.py  jobs.py  util.py
tecton/ingestion/apitools/: alpha_vantage.py  api_base.py  aws.py  databento.py  open_figi.py  writer.py  yfinance.py
tecton/ingestion/equities/: etl_config.yaml
tecton/ingestion/futures/: assets.py  ops.py  todo.md
tecton/models/: definition.py
tecton/models/trend/: trend_v1.yaml
tests/: scratch.py
tests/calculator/signal/: test_technical.py
tests/dal/futures/: market.py  test_market.py
tests/ingestion/apitools/: test_alpha_vantage.py  test_open_figi.py
