[project]
name = "quantlib"
version = "0.1.0"
description = "quantitive investment library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9.10",
    "dagster-duckdb>=0.25.11",
    "dagster-webserver>=1.9.11",
    "polars>=1.21.0",
]
[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "ruff>=0.9.4",
]

[[tool.uv.index]]
name = "pybuild"
url = "https://aam.jfrog.io/artifactory/api/pypi/pybuild/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://aam.jfrog.io/artifactory/api/pypi/pypi/simple"
default = true

[tool.dagster]
module_name = "quantlib.ingestion.definitions"
code_location_name = "quantlib_ingestion"
